--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -3,8 +3,8 @@ name: Build Image
 on: [push, pull_request, workflow_dispatch]
 
 env:
-  USER: "edifus" #don't modify
-  REPO: "deluge" #replace
+  ENDPOINT: "edifus/docker"
+  BRANCH: "master"
 
 jobs:
   build:
@@ -14,26 +14,16 @@ jobs:
 
       - name: Build image
         run: |
-          # Set version
-          DOTNET_JSON="$(curl --retry 5 -sX GET https://raw.githubusercontent.com/dotnet/core/master/release-notes/releases-index.json)"
-          DOTNET_VERSIONS="$(echo $DOTNET_JSON | jq -r '."releases-index"[] | select(."support-phase"=="lts" or ."support-phase"=="current") | ."latest-sdk"' | tr '\n' ' ' | head -c -1)"
-          DOTNET_TAG="$(echo $DOTNET_VERSIONS | tr ' ' '_')"
-          echo "DOTNET_TAG=${DOTNET_TAG}" >> $GITHUB_ENV
-          # Build image
-          docker build --no-cache --build-arg DOTNET_VERSIONS="${DOTNET_VERSIONS}" -t ${{ github.sha }} .
+          docker build --no-cache -t ${{ github.sha }} .
       - name: Tag image
-        if: ${{ github.ref == format('refs/heads/{0}-{1}', env.REPO, env.MODNAME) }}
+        if: ${{ github.ref == env.BRANCH }}
         run: |
-          docker tag ${{ github.sha }} ${USER}/${REPO}
-          docker tag ${{ github.sha }} ${USER}/${REPO}-${{ env.DOTNET_TAG }}
-          docker tag ${{ github.sha }} ${USER}/${REPO}-${{ env.DOTNET_TAG }}-${{ github.sha }}
-          docker tag ${{ github.sha }} ${USER}/${REPO}-${{ github.sha }}
-          docker tag ${{ github.sha }} ghcr.io/${USER}/${REPO}
-          docker tag ${{ github.sha }} ghcr.io/${USER}/${REPO}-${{ env.DOTNET_TAG }}
-          docker tag ${{ github.sha }} ghcr.io/${USER}/${REPO}-${{ env.DOTNET_TAG }}-${{ github.sha }}
-          docker tag ${{ github.sha }} ghcr.io/${USER}/${REPO}-${{ github.sha }}
+          docker tag ${{ github.sha }} ${ENDPOINT}:
+          docker tag ${{ github.sha }} ${ENDPOINT}:${{ github.sha }}
+          docker tag ${{ github.sha }} ghcr.io/${ENDPOINT}:
+          docker tag ${{ github.sha }} ghcr.io/${ENDPOINT}:${{ github.sha }}
       - name: Credential check
-        if: ${{ github.ref == format('refs/heads/{0}-{1}', env.REPO, env.MODNAME) }}
+        if: ${{ github.ref == env.BRANCH }}
         run: |
           echo "CR_USER=${{ secrets.CR_USER }}" >> $GITHUB_ENV
           echo "CR_PAT=${{ secrets.CR_PAT }}" >> $GITHUB_ENV
@@ -46,18 +36,20 @@ jobs:
             exit 1
           fi
       - name: Login to GitHub Container Registry
-        if: ${{ github.ref == format('refs/heads/{0}-{1}', env.REPO, env.MODNAME) && env.CR_USER && env.CR_PAT }}
+        if: ${{ github.ref == env.BRANCH && env.CR_USER && env.CR_PAT }}
         run: |
           echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ secrets.CR_USER }} --password-stdin
       - name: Push tags to GitHub Container Registry
-        if: ${{ github.ref == format('refs/heads/{0}-{1}', env.REPO, env.MODNAME) && env.CR_USER && env.CR_PAT }}
+        if: ${{ github.ref == env.BRANCH && env.CR_USER && env.CR_PAT }}
         run: |
-          docker push ghcr.io/${USER}/${REPO}
+          docker push ghcr.io/${ENDPOINT}:${{ github.sha }}
+          docker push ghcr.io/${ENDPOINT}:
       - name: Login to DockerHub
-        if: ${{ github.ref == format('refs/heads/{0}-{1}', env.REPO, env.MODNAME) && env.DOCKERUSER && env.DOCKERPASS }}
+        if: ${{ github.ref == env.BRANCH && env.DOCKERUSER && env.DOCKERPASS }}
         run: |
           echo ${{ secrets.DOCKERPASS }} | docker login -u ${{ secrets.DOCKERUSER }} --password-stdin
       - name: Push tags to DockerHub
-        if: ${{ github.ref == format('refs/heads/{0}-{1}', env.REPO, env.MODNAME) && env.DOCKERUSER && env.DOCKERPASS }}
+        if: ${{ github.ref == env.BRANCH && env.DOCKERUSER && env.DOCKERPASS }}
         run: |
-          docker push ${USER}/${REPO}
+          docker push ${ENDPOINT}:${{ github.sha }}
+          docker push ${ENDPOINT}:
