--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -16,14 +16,12 @@ jobs:
         run: |
           docker build --no-cache -t ${{ github.sha }} .
       - name: Tag image
-        if: ${{ github.ref == env.BRANCH }}
         run: |
-          docker tag ${{ github.sha }} ${ENDPOINT}:
+          docker tag ${{ github.sha }} ${ENDPOINT}
           docker tag ${{ github.sha }} ${ENDPOINT}:${{ github.sha }}
-          docker tag ${{ github.sha }} ghcr.io/${ENDPOINT}:
+          docker tag ${{ github.sha }} ghcr.io/${ENDPOINT}
           docker tag ${{ github.sha }} ghcr.io/${ENDPOINT}:${{ github.sha }}
       - name: Credential check
-        if: ${{ github.ref == env.BRANCH }}
         run: |
           echo "CR_USER=${{ secrets.CR_USER }}" >> $GITHUB_ENV
           echo "CR_PAT=${{ secrets.CR_PAT }}" >> $GITHUB_ENV
@@ -36,20 +34,20 @@ jobs:
             exit 1
           fi
       - name: Login to GitHub Container Registry
-        if: ${{ github.ref == env.BRANCH && env.CR_USER && env.CR_PAT }}
+        if: ${{ env.CR_USER && env.CR_PAT }}
         run: |
           echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ secrets.CR_USER }} --password-stdin
       - name: Push tags to GitHub Container Registry
-        if: ${{ github.ref == env.BRANCH && env.CR_USER && env.CR_PAT }}
+        if: ${{ env.CR_USER && env.CR_PAT }}
         run: |
           docker push ghcr.io/${ENDPOINT}:${{ github.sha }}
-          docker push ghcr.io/${ENDPOINT}:
+          docker push ghcr.io/${ENDPOINT}
       - name: Login to DockerHub
-        if: ${{ github.ref == env.BRANCH && env.DOCKERUSER && env.DOCKERPASS }}
+        if: ${{ env.DOCKERUSER && env.DOCKERPASS }}
         run: |
           echo ${{ secrets.DOCKERPASS }} | docker login -u ${{ secrets.DOCKERUSER }} --password-stdin
       - name: Push tags to DockerHub
-        if: ${{ github.ref == env.BRANCH && env.DOCKERUSER && env.DOCKERPASS }}
+        if: ${{ env.DOCKERUSER && env.DOCKERPASS }}
         run: |
           docker push ${ENDPOINT}:${{ github.sha }}
-          docker push ${ENDPOINT}:
+          docker push ${ENDPOINT}
