--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -4,7 +4,7 @@ on: [push, pull_request, workflow_dispatch]
 
 env:
   ENDPOINT: "edifus/deluge"
-  BRANCH: "master"
+  BRANCH: "main"
 
 jobs:
   build:
